# pbrew

./: .gitignore  CLAUDE.md  pyproject.toml  pytest.ini
.claude/: lessons.md  settings.json
pbrew/: __init__.py
pbrew/cli/: __init__.py  clean.py  cleanup.py  config_.py  doctor.py  env.py  ext.py  fpm.py  info.py  init_.py  install.py  known.py  list_.py  log_.py  outdated.py  remove.py  shell_init.py  test_.py  update.py  upgrade.py  use.py  variants.py
pbrew/core/: build_libs.py  builder.py  config.py  global_config.py  patches.py  paths.py  php_test_runner.py  prerequisites.py  resolver.py  shell.py  state.py  wrapper_script.py  wrappers.py
pbrew/extensions/: installer.py  pecl.py
pbrew/fpm/: pools.py  services.py  xdebug.py
pbrew/utils/: download.py  health.py
tests/: test_build_libs.py  test_builder.py  test_clean.py  test_config.py  test_config_cmd.py  test_config_tracking.py  test_configs_init.py  test_distfiles.py  test_download.py  test_env.py  test_ext_add.py  test_ext_add_cmd.py  test_ext_cli.py  test_ext_config_prompt.py  test_ext_multiselect.py  test_ext_remove_interactive.py  test_extension_cmd.py  test_fpm_cli.py  test_health.py  test_info.py  test_init.py  test_install_ux.py  test_installer.py  test_list.py  test_log_errors.py  test_outdated.py  test_patches.py  test_paths.py  test_pecl.py  test_pools.py  test_prerequisites.py  test_remove.py  test_resolver.py  test_root_init.py  test_services.py  test_shell.py  test_shell_init.py  test_shell_integration.py  test_state.py  test_update.py  (+8 more)
tests/integration/: test_real_install.py
(+4 files in other folders)
