[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pbrew"
version = "0.1.0"
description = "Python-based PHP version manager — phpbrew successor"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "tomlkit>=0.12",
]

[project.scripts]
pbrew = "pbrew.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pbrew*"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
